# vueStockapi

./: .gitignore  BACKTRADER_GUIDE.md  BACKTRADER_SUMMARY.md  CLAUDE.md  CORS_FIX_SUMMARY.md  GEMINI.md  IMPLEMENTATION_GUIDE.md  LICENSE  MYSQL_MIGRATION_GUIDE.md  MYSQL_MIGRATION_SUMMARY.md  ORACLE_FIX.md  QUANTITY_ZERO_FIX.md  QUICK_START.md  README.md  REDIS_CELERY_SUMMARY.md  REDIS_SETUP_GUIDE.md  SERVER_REDIS_FIX.md  START_CELERY_WORKER.md  UV_MIGRATION.md  apply_mysql_migration.bat  check_migrations.py  check_mysql_tables.py  check_proxy_ip.py  check_trades.py  create_superuser.py  create_weighing_table.py  diagnose_redis.py  environment.yml  fix_march_daily_data.py  manage.py  oracle-test.py  password_file.txt  pyproject.toml  quick_test.py  readme.md  run_api_tests.py  run_tests.bat  settings.py  start_celery_beat.sh  start_celery_worker.sh  (+23 more)
.agent/: server_config.md
backtest/: README.md  apps.py  bt_test_01.py  data_feeds.py  longhuitou.md  models.py  serializers.py  strategies.py  strategies_backtrader.py  strategies_limit_break.py  tasks.py  test_limit_break.py  tests.py  urls.py  utils.py  views.py
basic/: admin.py  analysis.py  celery.py  middleware.py  models.py  serializers.py  tasks.py  urls.py  utils.py  views.py
oracle/: tnsnames.ora
utils/: telegram.py
vueStockapi/: __init__.py  asgi.py  auth_views.py  celery.py  db_router.py  nohup.out  settings.py  settings_test.py  urls.py  wsgi.py
vueStockapi.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
weighing/: apps.py  db_router.py  models.py  serializers.py  urls.py  views.py
(+51 files in other folders)
